# Attome-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  OPTIMIZATION_LOG.md  OPTIMIZATION_SUMMARY.md  README.md  cmd.txt  problems_faced.md  shell.html  test_find.cmake  test_output.txt  vcpkg.json  verify_output.txt  verify_output_2.txt  verify_output_3.txt
.agent/: problems_faced.md
engine/: ATMDynamicArray.h  ATMEngine.cpp  ATMEngine.h  CMakeLists.txt
engine/src/: ATMBufferPool.cpp  ATMByteBuffer.cpp  ATMEngine.cpp  ATMEngine.h  ATMLog.h  ATMProfiler.h  ATMProtocol.h  Config.h  Entity.cpp  GameState.h  GameUI.h  Networking.cpp  Networking.h  Renderer.h  UI.cpp  UI.h
engineBasic/: BasicEngine.cpp
engine_old/: BasicEngine.cpp  BasicEngine.h
game/: ATMBufferPool.h  ATMByteBuffer.h  ATMCommon.h  ATMDynamicArray.h  ATMEngine (12).h  ATMEngine (13).h  ATMEngine (14).h  ATMEngine (17).h  ATMEngine (2).h  ATMEngine (21).h  ATMEngine (23).h  ATMEngine (24).h  ATMEngine (3).h  ATMEngine (4).h  ATMEngine (5).h  ATMEngine (6).h  ATMEngine (7).h  ATMEngine (9).h  ATMEngine.h  ATMNetwork.h  ATMProfiler.h  ATMProtocol.h  Config.h  Entity.h  EntitySystem.h  GameState.h  GameUI.h  Networking.h  Renderer.h  UI.h  VulkanLoader.h  VulkanRenderer (12).h  VulkanRenderer (13).h  VulkanRenderer (14).h  VulkanRenderer (16).h  VulkanRenderer (2).h  VulkanRenderer (4).h  VulkanRenderer (5).h  VulkanRenderer (6).h  VulkanRenderer (7).h  (+1 more)
gameBasic/: BasicEngine.cpp  BasicEngine.h  planet_game_basic.cpp  stb_impl.cpp  zombie_game_basic.cpp
gameOptimized/: planet_game.cpp  snake_game.cpp
gameSrc/: ATMEngine (10).cpp  ATMEngine (13).cpp  ATMEngine (14).cpp  ATMEngine (15).cpp  ATMEngine (16).cpp  ATMEngine (2).cpp  ATMEngine (20).cpp  ATMEngine (21).cpp  ATMEngine (23).cpp  ATMEngine (24).cpp  ATMEngine (3).cpp  ATMEngine (4).cpp  ATMEngine (5).cpp  ATMEngine (6).cpp  ATMEngine (7).cpp  ATMEngine (8).cpp  ATMEngine (9).cpp  ATMEngine.cpp  Renderer.cpp  VulkanLoader.cpp  VulkanRenderer (10).cpp  VulkanRenderer (11).cpp  VulkanRenderer (12).cpp  VulkanRenderer (13).cpp  VulkanRenderer (14).cpp  VulkanRenderer (15).cpp  VulkanRenderer (16).cpp  VulkanRenderer (2).cpp  VulkanRenderer (3).cpp  VulkanRenderer (4).cpp  VulkanRenderer (5).cpp  VulkanRenderer (6).cpp  VulkanRenderer (7).cpp  VulkanRenderer.cpp  main (10).cpp  main (12).cpp  main (13).cpp  main (14).cpp  main (2).cpp  main (20).cpp  (+10 more)
games/PlantGame/: CMakeLists.txt
games/PlantGame/src/: main.cpp
games/SnakeGame/: CMakeLists.txt
games/SnakeGame/src/: main.cpp
html/: CMakeLists.txt
include/: ATMEngine (10).h  ATMEngine (11).h  ATMEngine (12).h  ATMEngine (13).h  ATMEngine (16).h  ATMEngine (18).h  ATMEngine (19).h  ATMEngine (2).h  ATMEngine (23).h  ATMEngine (25).h  ATMEngine (28).h  ATMEngine (3).h  ATMEngine (30).h  ATMEngine (31).h  ATMEngine (34).h  ATMEngine (35).h  ATMEngine (4).h  ATMEngine (5).h  ATMEngine (8).h  ATMEngine.h  ATMEngine4 (2).h  ATMEngine5.h  ATMNetwork (2).h  ATMNetwork (3).h  ATMNetworkTest.h  ATMProfiler.h
include/ATMEngine/: ATMBufferPool.h  ATMByteBuffer.h  ATMEngine.h  ATMNetwork.h  Entity.h  EntitySystem.h  GameUI.h  Networking.h  UI.h
include/engine3D/: ATMEngine.h  ATMEngineConfig.h  ATMLog.h  ATMPipeline.h  test.h
lib/: ATMBufferPool.cpp  ATMByteBuffer.cpp
shaders/: basic.frag  basic_frag.spv  basic_vert.spv  phong.frag  phong.vert  phong_frag.spv  phong_vert.spv  script.bat  simple.vert  test.vert  textured.vert  textured_vert.spv  textures.frag  textures_frag.spv
src/: ATMBufferPool.cpp  ATMByteBuffer.cpp  ATMEngine (10).cpp  ATMEngine (11).cpp  ATMEngine (12).cpp  ATMEngine (13).cpp  ATMEngine (14).cpp  ATMEngine (15).cpp  ATMEngine (16).cpp  ATMEngine (18).cpp  ATMEngine (19).cpp  ATMEngine (2).cpp  ATMEngine (21).cpp  ATMEngine (22).cpp  ATMEngine (23).cpp  ATMEngine (24).cpp  ATMEngine (25).cpp  ATMEngine (27).cpp  ATMEngine (28).cpp  ATMEngine (29).cpp  ATMEngine (3).cpp  ATMEngine (30).cpp  ATMEngine (31).cpp  ATMEngine (32).cpp  ATMEngine (35).cpp  ATMEngine (4).cpp  ATMEngine (6).cpp  ATMEngine (7).cpp  ATMEngine (8).cpp  ATMEngine-cur.cpp  ATMEngine.cpp  ATMEngine4.cpp  ATMEngineUI.cpp  ATMNetwork (2).cpp  ATMNetwork.cpp  Entity.cpp  Networking.cpp  Renderer.cpp  UI.cpp  main (10).cpp  (+30 more)
src/engine3D/: ATMGPU.cpp  ATMGrid.cpp  ATMMemory.cpp  ATMPipeline.cpp  ATMRenderer.cpp  ATMSimd.cpp  engine3D.cpp
src/temp/: ATMEngine (2) (2).cpp  ATMEngine (2).h
src/temp/fastest/: ATMEngine.cpp  ATMEngine.h  main.cpp
src/temp/fastest_v2/: ATMEngine.h  main.cpp
src/temp/temp2/: ATMEngine.cpp
src/temp/temp3/: ATMEngine (2).cpp  ATMEngine (2).h  game.cpp
temphtml/: CMakeCache.txt  Makefile  cmake_install.cmake
temphtml/html/: Makefile  cmake_install.cmake
windows/: CMakeLists.txt
